2020-11-30 0.22
  * added option --save-configuration: format and
    save configuration file
  * fixed reading cryption keys via config file
  * fixed CD/DVD/BD blank command: use
    "dvd+rw-format -force" to create medium in
    restricted overwrite mode
  * parallel restore
  * use thread-pool
  * added support for MariaDB database
  * upgrade bzip2 1.0.8
  * upgrade MMXL 3.2
  * upgrade zStandard 1.4.8
  * upgrade gpp-error 1.41
  * upgrade gcrypt 1.8.7
  * upgrade nettle 3.7
  * upgrade gmp 6.2.1
  * upgrade libidn2 2.3.0
  * upgrade GnuTLS 3.7.0
  * upgrade libicon 1.16
  * upgrade OpenSSL 1.1.1i
  * upgrade c-areas 1.17.1
  * upgrade curl 7.74.0
  * upgrade pcre 8.44
  * upgrade SQLite 3.34
  * upgrade binutils 2.35

2020-09-27 0.21f
  * fixed auto-index of new archives
  * BARControl: synchonous update of job data

2020-08-28 0.21e
  * fixed database constraint-error when storing
    huge files in splitted archive mode

2020-08-20 0.21d
  * fixed entity create date/time
  * fixed purge entities when creating new entity
  * fixed delete partial created entity on error

2020-08-11 0.21c
  * added configuration mainetance time windows
  * fixed duplicate special entries in archive
  * fixed purge entity, storages
  * fixed data aggregation in index database
  * fixed/improved delete log messages
  * fixed auto-import archives into index
  * fixed delete expired archives: locking
  * fixed hostname/username in index
  * fixed aggregated index data for splitted archives
  * fixed schedule UUID: use a new UUID for each
    executed job
  * fixed convert: set schedule UUID for all archives
    in a convert operation, do not change create
    date/time
  * fixed convert: temporary file
  * fixed output keys: avoid info on redirection of
    stdout
  * fixed storage of fragmented files which were
    modified
  * fixed restore single files
  * fixed restore splitted file with rename mode
  * fixed expansion of storage names with ':': escape with %: