@@ -8,6 +8,8 @@
   * parallel restore
   * use thread-pool
   * added support for MariaDB database
+  * execute pre/post command for BAR in non-server mode,
+    too
   * upgrade bzip2 1.0.8
   * upgrade MMXL 3.2
   * upgrade zStandard 1.4.8
